feat: stabilizing process done

--- a/json/config.json
+++ b/json/config.json
@@ -5,6 +5,5 @@
         "content": "You are a helpful assistant."
     },
     "max_tokens": 256,
-    "temperature": 1.0,
-    "presence_penalty": 1.0
+    "temperature": 1.0
 }
