--- a/json/config.json
+++ b/json/config.json
@@ -1,9 +1,5 @@
 {
-    "model": "gpt-3.5-turbo-16k",
-    "sys_msg": {
-        "role": "system",
-        "content": "You are a helpful assistant."
-    },
+    "model": "gpt-3.5-turbo-instruct",
     "max_tokens": 256,
     "temperature": 1.0
 }
